# lp

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  run.py
MATLAB/week4/: homework4.m
MATLAB/week5/: ps10.m  ps3.m  ps9.m  sat1.m  sat2.m
configs/: config21.py  config22.py  config31.py  config61.py
glpk/week1/: Makefile  diet.data  diet.model  ex1.ampl  ex1.data  standard_form.model
glpk/week5/: Makefile  ps1.ampl  ps10.data  ps10.model  ps2.ampl  ps3.ampl  ps9.data  ps9.model  sat1.ampl  sat2.ampl
results/homework22/: part2.dict.output  part4.dict.output  part5.dict.output
results/homework31/: part10.output  part2.output  part3.output  part6.output  part9.output
src/homework21/: main.cpp
src/homework22/: main.cpp
src/homework31/: main.cpp
src/homework61/: main.cpp
src/lplib/: basic_types.h  cutting_plane.cpp  cutting_plane.h  dictionary.cpp  dictionary.h  simplex.cpp  simplex.h
